# ShopInventoryManager

./: .clang-format  README.md  configure_all.bat  make_all.bat  make_clean_all.bat
EventHandler/include/: event_handler.hpp
StateMachine/: CMakeLists.txt
StateMachine/cmake/: state_machine-config.cmake
StateMachine/include/: all_shop_states.hpp  shop.hpp  shop_state.hpp
StateMachine/include/states/: admin_option_selection.hpp  change_login_info.hpp  employee_attendance_display.hpp  employee_portal.hpp  item_update.hpp  login.hpp  restock_update.hpp  restocking_suggestion.hpp  stock_info.hpp
StateMachine/src/: shop.cpp
StateMachine/src/states/: admin_option_selection.cpp  change_login_info.cpp  employee_attendance_display.cpp  employee_portal.cpp  item_update.cpp  login.cpp  restock_update.cpp  restocking_suggestion.cpp  stock_info.cpp
UI/: CMakeLists.txt
UI/cmake/: shopinventory_ui-config.cmake
UI/forms/: mainwindow.ui  mainwindow.ui.autosave
UI/include/: mainwindow.hpp
UI/include/models/: stock_info_model.hpp
UI/src/: mainwindow.cpp
UI/src/models/: stock_info_model.cpp
database/: CMakeLists.txt
database/cmake/: database-config.cmake
database/include/: database.hpp
database/src/: Db1test  Dbmain.db  database.cpp  database4_opt.cpp  requirements.txt  run1
front-end/: Admin_Portal.ui  employee_list.ui  item_list.ui  login.ui  restocking.ui
main/: CMakeLists.txt  main.cpp
optimizer/: CMakeLists.txt  data.txt  optimizer.cpp  optimizer2.cpp
state_machine/: CMakeLists.txt
state_machine/include/: all_shop_states.hpp  database.hpp  shop.hpp  shop_state.hpp
state_machine/include/states/: admin_option_selection.hpp  employee_attendance_display.hpp  employee_portal.hpp  login.hpp  profit_loss_display.hpp  restock_update.hpp  restocking_suggestion.hpp
state_machine/src/: main.cpp  shop.cpp
state_machine/src/states/: admin_option_selection.cpp  employee_attendance_display.cpp  employee_portal.cpp  forecast.cpp  login.cpp  profit_loss_display.cpp  restock_update.cpp  restocking_suggestion.cpp
